@@ -1,12 +1,13 @@
-package com.bootcamp.microservicemeetup.controller;
+package com.bootcamp.microservicemeetup.controller.resource;
 
 import com.bootcamp.microservicemeetup.controller.dto.MeetupDTO;
-import com.bootcamp.microservicemeetup.controller.resource.MeetupController;
+import com.bootcamp.microservicemeetup.controller.dto.MeetupUpdateDTO;
 import com.bootcamp.microservicemeetup.exception.BusinessException;
 import com.bootcamp.microservicemeetup.model.entity.Meetup;
 import com.bootcamp.microservicemeetup.model.entity.Registration;
 import com.bootcamp.microservicemeetup.service.MeetupService;
 import com.bootcamp.microservicemeetup.service.RegistrationService;
+import org.hamcrest.Matchers;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -16,6 +17,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
@@ -24,6 +28,9 @@ import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilde
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.testcontainers.shaded.com.fasterxml.jackson.databind.ObjectMapper;
 
+import java.time.LocalDate;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -60,17 +67,10 @@ public class MeetupControllerTest {
                 .build();
         String json = new ObjectMapper().writeValueAsString(dto);
 
-        Registration registration = Registration.builder()
-                .id(11)
-                .build();
-
-        BDDMockito.given(registrationService.getRegistrationById(11)).
-                willReturn(Optional.of(registration));
-
         Meetup meetup = Meetup.builder()
                 .id(11)
                 .event("Womakerscode Dados")
-                .registrations(List.of(registration))
+                .registrations(Collections.emptyList())
                 .meetupDate("20/06/2022")
                 .ownerId(1)
                 .build();
@@ -221,8 +221,7 @@ public class MeetupControllerTest {
     @Test
     @DisplayName("Should update when meetup info")
     public void updateMeetupTest() throws Exception {
-
-        String json = new com.fasterxml.jackson.databind.ObjectMapper().writeValueAsString(createNewMeetup());
+        String json = new ObjectMapper().writeValueAsString(createMeetupUpdateDTO());
 
         Integer idMeetup = 44;
 
@@ -235,13 +234,12 @@ public class MeetupControllerTest {
 
         BDDMockito.given(meetupService.getById(idMeetup)).willReturn(Optional.of(meetup));
 
-        Meetup meetupUpdated = meetup;
-        meetupUpdated.setEvent("Womakercode Java");
+        meetup.setEvent("Womakercode Java");
 
-        BDDMockito.given(meetupService.update(meetup)).willReturn(meetupUpdated);
+        BDDMockito.given(meetupService.update(meetup)).willReturn(meetup);
 
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders.put(MEETUP_API.concat("/" + idMeetup))
-                .contentType(json)
+                .content(json)
                 .accept(MediaType.APPLICATION_JSON)
                 .contentType(MediaType.APPLICATION_JSON);
 
@@ -252,5 +250,53 @@ public class MeetupControllerTest {
     private Meetup createNewMeetup() {
         return Meetup.builder().id(101).event("Womakerscode Java").meetupDate("25/06/2022").registered(true)
                 .build();
+    }
+
+    private MeetupUpdateDTO createMeetupUpdateDTO() {
+        return MeetupUpdateDTO.builder().event("Womalercode").date("06-05-2022").ownerId(1)
+                .build();
+    }
+
+    @Test
+    @DisplayName("Should return meetup")
+    void testFindAndShouldMeetup() throws Exception {
+
+        Meetup meetup = Meetup.builder().event("WomakersCode").id(1).meetupDate("05-05-2022").ownerId(1)
+                .registrations(List.of(Registration.builder().id(1)
+                .personId("1").dateOfRegistration(LocalDate.now()).name("VanessaYoshida").build())).build();
+
+        BDDMockito.given(meetupService.getRegistrationsByMeetup(Mockito.any(Meetup.class),
+                Mockito.any(Pageable.class)))
+                .willReturn(new PageImpl<Meetup>(Arrays.asList(meetup), PageRequest.of(0, 10), 1));
+
+        MockHttpServletRequestBuilder request = MockMvcRequestBuilders.get(MEETUP_API.concat("?event=WoMakersCode&page=0&size=10"))
+                .accept(MediaType.APPLICATION_JSON);
+
+        mockMvc.perform(request)
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("content", Matchers.hasSize(1)))
+                .andExpect(jsonPath("totalElements").value(1))
+                .andExpect(jsonPath("pageable.pageSize").value(10))
+                .andExpect(jsonPath("pageable.pageNumber").value(0));
+
+    }
+
+    @Test
+    @DisplayName("Should return empty list")
+    void testFindAndShouldReturnEmptyList() throws Exception {
+
+        BDDMockito.given(meetupService.getRegistrationsByMeetup(Mockito.any(Meetup.class),
+                        Mockito.any(Pageable.class)))
+                .willReturn(new PageImpl<Meetup>(Collections.emptyList(), PageRequest.of(0, 10), 0));
+
+        MockHttpServletRequestBuilder request = MockMvcRequestBuilders.get(MEETUP_API.concat("?event=WoMakersCode&page=0&size=10"))
+                .accept(MediaType.APPLICATION_JSON);
+
+        mockMvc.perform(request)
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("content", Matchers.hasSize(0)))
+                .andExpect(jsonPath("totalElements").value(0))
+                .andExpect(jsonPath("pageable.pageSize").value(10))
+                .andExpect(jsonPath("pageable.pageNumber").value(0));
     }
 }
